src-tauri/check_output_2.txt
    Checking pursue-data-analyzer v0.2.0 (/Users/kody/NuGit/pursue/src-tauri)
error[E0432]: unresolved import `ort::Tensor`
 --> src/search.rs:4:20
  |
4 | use ort::{session, Tensor};
  |                    ^^^^^^ no `Tensor` in the root

error[E0425]: cannot find function `path` in crate `sqlite_vec`
  --> src/db/mod.rs:21:32
   |
21 |     let vec_path = sqlite_vec::path();
   |                                ^^^^ not found in `sqlite_vec`

warning: unused imports: `Components`, `Disks`, `Networks`, and `Users`
 --> src/analysis/diagnostics.rs:2:15
  |
2 | use sysinfo::{Components, Disks, Networks, System, Users};
  |               ^^^^^^^^^^  ^^^^^  ^^^^^^^^          ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow`
 --> src/analysis/model_manager.rs:2:14
  |
2 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `Path`
 --> src/analysis/model_manager.rs:5:17
  |
5 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `Allocated`
 --> src/analysis/native_macos.rs:7:21
  |
7 |     use objc2::rc::{Allocated, Id};
  |                     ^^^^^^^^^

warning: unused import: `NSError`
 --> src/analysis/native_macos.rs:9:51
  |
9 |     use objc2_foundation::{NSArray, NSDictionary, NSError, NSString, NSURL};
  |                                                   ^^^^^^^

warning: unused import: `VNRecognizedTextObservation`
  --> src/analysis/native_macos.rs:11:56
   |
11 |         VNImageRequestHandler, VNRecognizeTextRequest, VNRecognizedTextObservation, VNRequest,
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::analysis::diagnostics::IntelligenceTier`
  --> src/analysis/mod.rs:19:5
   |
19 | use crate::analysis::diagnostics::IntelligenceTier;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated type alias `objc2::rc::Id`: Renamed to `Retained`.
 --> src/analysis/native_macos.rs:7:32
  |
7 |     use objc2::rc::{Allocated, Id};
  |                                ^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `objc2::rc::Id`: Renamed to `Retained`.
  --> src/analysis/native_macos.rs:35:52
   |
35 |             let requests = NSArray::from_slice(&[&*Id::cast::<VNRequest>(request.clone())]);
   |                                                    ^^

warning: variable does not need to be mutable
  --> src/analysis/model_manager.rs:30:13
   |
30 |         let mut response = self.client.get(url).send().await?;
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `for<'r> SearchResultItem: FromRow<'r, _>` is not satisfied
   --> src/search.rs:38:39
    |
 38 |     let results = sqlx::query_as::<_, SearchResultItem>(
    |                                       ^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `for<'r> FromRow<'r, _>` is not implemented for `SearchResultItem`
   --> src/models.rs:192:1
    |
192 | pub struct SearchResultItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `FromRow<'r, R>`:
              `()` implements `FromRow<'r, R>`
              `(T1, T2)` implements `FromRow<'r, R>`
              `(T1, T2, T3)` implements `FromRow<'r, R>`
              `(T1, T2, T3, T4)` implements `FromRow<'r, R>`
              `(T1, T2, T3, T4, T5)` implements `FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6)` implements `FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6, T7)` implements `FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6, T7, T8)` implements `FromRow<'r, R>`
            and 15 others
note: required by a bound in `sqlx::query_as`
   --> /Users/kody/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sqlx-core-0.8.6/src/query_as.rs:345:8
    |
342 | pub fn query_as<'q, DB, O>(sql: &'q str) -> QueryAs<'q, DB, O, <DB as Database>::Arguments<'q>>
    |        -------- required by a bound in this function
...
345 |     O: for<'r> FromRow<'r, DB::Row>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `query_as`

error[E0599]: the method `fetch_all` exists for struct `QueryAs<'_, _, SearchResultItem, _>`, but its trait bounds were not satisfied
   --> src/search.rs:52:6
    |
 38 |       let results = sqlx::query_as::<_, SearchResultItem>(
    |  ___________________-
 39 | |         r#"
 40 | |         SELECT 
 41 | |             r.*, 
...   |
 51 | |     .bind(vector_blob)
 52 | |     .fetch_all(pool)
    | |     -^^^^^^^^^ method cannot be called on `QueryAs<'_, _, SearchResultItem, _>` due to unsatisfied trait bounds
    | |_____|
    |
    |
   ::: src/models.rs:192:1
    |
192 |   pub struct SearchResultItem {
    |   --------------------------- doesn't satisfy `SearchResultItem: FromRow<'r, _>`
    |
    = note: the following trait bounds were not satisfied:
            `SearchResultItem: FromRow<'r, _>`

error[E0599]: no method named `app_data_dir` found for reference `&LibraryManager` in the current scope
  --> src/analysis/model_manager.rs:15:34
   |
15 |         let models_dir = library.app_data_dir().join("models");
   |                                  ^^^^^^^^^^^^ private field, not a method

warning: use of deprecated associated function `objc2::rc::Retained::<T>::cast`: Use `downcast`, or `cast_unchecked` instead
  --> src/analysis/native_macos.rs:35:56
   |
35 |             let requests = NSArray::from_slice(&[&*Id::cast::<VNRequest>(request.clone())]);
   |                                                        ^^^^

error[E0133]: call to unsafe function `Retained::<T>::cast` is unsafe and requires unsafe function or block
  --> src/analysis/native_macos.rs:35:52
   |
35 |             let requests = NSArray::from_slice(&[&*Id::cast::<VNRequest>(request.clone())]);
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

Some errors have detailed explanations: E0133, E0277, E0425, E0432, E0599.
For more information about an error, try `rustc --explain E0133`.
warning: `pursue-data-analyzer` (lib) generated 11 warnings
error: could not compile `pursue-data-analyzer` (lib) due to 6 previous errors; 11 warnings emitted
